# ziyy

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  arg.py  err.py  file.html  help.zi  libshstyle.yaml  mbkit.yaml  mbkit2.py  mbkit3.py  out.rs  rgb2.py  v1
.github/workflows/: rust-clippy.yml  rust.yml
bash/: android-manifest.yaml  mbkit.1
bash/src/: libziyy.sh  mbkit.sh  style.sh  ziyy.sh
bash/src/compiler/: main.sh  parser.sh  state.sh
bash/src/scanner/: debug.sh  main.sh  token.sh
bash/src/value/: c.sh  main.sh  x.sh
java/: pom.xml
java/src/main/java/ziyy/: Debug.java  Ziyy.java
java/src/main/java/ziyy/compiler/: Compiler.java  ParseException.java  Parser.java  State.java
java/src/main/java/ziyy/scanner/: Scanner.java  Token.java  TokenKind.java
java/src/main/java/ziyy/value/: C.java  Value.java  X.java
java/src/test/java/ziyy/: AppTest.java
javascript/: package-lock.json  package.json  tsconfig.json
javascript/src/: debug.ts  style.ts  ziyy.ts
javascript/src/compiler/: index.ts  parser.ts  state.ts
javascript/src/scanner/: index.ts  token.ts
javascript/src/value/: c.ts  index.ts  x.ts
nodejs/: package.json
python/: pyproject.toml
python/mbkit/: con.py  mbkit.py  rgb.py  style.py  ~mbkit2.py
python/src/: bin.py  file
python/src/ziyy/: __init__.py  __main__.py  debug.py
python/src/ziyy/compiler/: __init__.py  parser.py  state.py
python/src/ziyy/scanner/: __init__.py  token.py
python/src/ziyy/value/: __init__.py  c.py  x.py
rust/: .clippy.toml  Cargo.toml  clippy.txt  foo.txt  he  help.txt  help.zo  test.zi
rust/src/: foo.txt  lib.rs
rust/src/color/: ansi_style.rs  bit_4.rs  channel.rs  mod.rs  rgb.rs
rust/src/compiler/: error.rs  mod.rs  parser.rs  state.rs
rust/src/error/: mod.rs
rust/src/num/: mod.rs
rust/src/parser/: close_tag.rs  helpers.rs  macros.rs  mod.rs  open_and_close_tag.rs  open_tag.rs  parse_tag.rs  state.rs  tag.rs  write_attribs.rs
rust/src/scanner/: mod.rs  position.rs  token.rs
rust/src/value/: c.rs  mod.rs  x.rs
rust/ziyy-core/: Cargo.toml
rust/ziyy-core/src/: lib.rs
rust/ziyy-core/src/color/: ansi_style.rs  bit_4.rs  channel.rs  mod.rs  rgb.rs
rust/ziyy-core/src/error/: mod.rs
rust/ziyy-core/src/num/: mod.rs
rust/ziyy-core/src/parser/: close_tag.rs  helpers.rs  mod.rs  open_and_close_tag.rs  open_tag.rs  parse_chunk.rs  parse_tag.rs  state.rs  tag.rs  write_attribs.rs
rust/ziyy-core/src/scanner/: mod.rs  position.rs  span.rs  token.rs
rust/ziyy-core/src/style/: builder.rs  close.rs  condition.rs  mod.rs
rust/ziyy-core/src/value/: c.rs  x.rs
rust/ziyy-proc/: Cargo.toml
rust/ziyy-proc/src/: lib.rs
src/: arg.rs  error.rs  help.zi  help.zy  lib.rs  main.rs
src/common/: mod.rs  position.rs
src/indexer/: mod.rs
src/parser/: chunk.rs  mod.rs
src/parser/color/: mod.rs  scanner.rs
src/parser/tag_parer/: impl_tag.rs  mod.rs  scanner.rs  tag.rs  token.rs
src/parser/word_parer/: mod.rs  scanner.rs  token.rs
src/resolver/: mod.rs
src/resolver/document/: mod.rs  node.rs
src/scanner/: mod.rs  source.rs
src/splitter/: mod.rs
src/stage_1/: mod.rs
src/stage_2/: fragment.rs  mod.rs
src/stage_3/: chunk.rs  mod.rs
src/stage_3/color/: mod.rs  number.rs  token.rs
src/stage_3/tag_parer/: mod.rs  scanner.rs  tag.rs
src/stage_3/word_parer/: mod.rs  scanner.rs
src/stage_4/: mod.rs
src/stage_4/document/: mod.rs  node.rs
tests/: raise.py
typescript/: .npmignore  package-lock.json  package.json
typescript/src/: package-lock.json  package.json  style.ts  tsconfig.json
ziyy-core/: Cargo.toml
ziyy-core/src/: builtin.rs  error.rs  lib.rs
ziyy-core/src/common/: position.rs  span.rs
ziyy-core/src/indexer/: mod.rs  scanner.rs  token.rs
ziyy-core/src/parser/: chunk.rs  mod.rs
ziyy-core/src/parser/ansi/: effect.rs  mod.rs  options.rs  state.rs
ziyy-core/src/parser/color/: mod.rs  scanner.rs  token.rs
ziyy-core/src/parser/tag_parer/: mod.rs  scanner.rs  tag.rs
ziyy-core/src/parser/word_parer/: ansi.rs  mod.rs  scanner.rs  token.rs
ziyy-core/src/resolver/: mod.rs
ziyy-core/src/resolver/document/: iter.rs  mod.rs  node.rs
ziyy-core/src/scanner/: mod.rs  source.rs
ziyy-core/src/splitter/: fragment.rs  mod.rs
ziyy-core/src/ziyy/: mod.rs  parse.rs  render.rs
ziyy-core/tests/: colors_test.rs  errors_test.rs
ziyy-proc/: Cargo.toml
ziyy-proc/src/: lib.rs
