[package]
name = "ziyy"
version = "2.0.0"
readme = "../README.md"
repository = "https://github.com/alMukaafih/ziyy.git"
edition = "2021"
description = "Convenient Terminal Output Styler."
license = "MIT OR Apache-2.0"
keywords = ["terminal", "color", "style", "rgb", "cli"]
categories = ["command-line-interface", "command-line-utilities"]


[dependencies]
