[package]
name = "ziyy"
version = "2.0.0"
readme = "../README.md"
repository = "https://github.com/alMukaafih/ziyy.git"
edition = "2021"
description = "Terminal Markup Language."
license = "MIT OR Apache-2.0"
keywords = ["terminal", "color", "style", "rgb", "cli"]
categories = ["command-line-interface", "command-line-utilities"]

[workspace]
members = ["ziyy-core", "ziyy-proc"]

[dependencies]
ziyy-core = { path = "ziyy-core" }
