[project]
name = "ziyy"
version = "2.0.0-beta.1"
authors = [
  { name="alMukaafih", email="almukaafih@gmail.com" },
]
description = "Convenient Terminal Output Styler."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/alMukaafih/ziyy"
Documentation = "https://github.com/alMukaafih/ziyy#readme"
Repository = "https://github.com/alMukaafih/ziyy.git"
Issues = "https://github.com/alMukaafih/ziyy/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"