[package]
name = "ziyy"
version = "2.0.0-beta.2"
readme = "../README.md"
repository = "https://github.com/alMukaafih/ziyy.git"
edition = "2021"
description = "Terminal Markup Language."
license = "MIT OR Apache-2.0"
keywords = ["terminal", "html", "style", "rgb", "cli"]
categories = ["command-line-interface", "command-line-utilities", ]
resolver = "2"

[package.metadata.docs.rs]
features = ["tag", "source"]
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "debug"
doc = false

[workspace]
members = ["ziyy-proc"]

[dependencies]
ziyy-proc = { path = "ziyy-proc", optional = true }

[features]
source = ["dep:ziyy-proc"]