[package]
name = "ziyy-core"
version = "0.1.1"
repository = "https://github.com/ziyy-dev/ziyy-rs.git"
edition = "2024"
description = "Terminal Styling using HTML-like syntax."
license = "MIT OR Apache-2.0"
keywords = ["terminal", "color", "style", "html", "cli"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
